# totem

./: .gitignore  CMakeLists.txt  README.md
examplegame/: CMakeLists.txt
examplegame/src/: ExampleGame.cpp
sandbox/: CMakeLists.txt
sandbox/resources/shaders/: Ffont.glsl
sandbox/src/: Sandbox.cpp
src/: CMakeLists.txt
src/sandbox/: CMakeLists.txt  sandbox.cpp
src/totem/: App.h  Assert.h  CMakeLists.txt  Events.h  Log.cpp  Timer.cpp  Timer.h  Totem.cpp  Window.cpp  Window.h
src/totem/Math/: Mat.cpp  Vec.h
src/totem/Platform/Linux/: LinuxWindow.cpp  LinuxWindow.h
src/totem/Renderer/: Renderer.cpp  Renderer.h  Texture.cpp  Texture.h
tests/: CMakeLists.txt  Tests.cpp  Tests.h  TextTests.cpp  TextTests.h
tools/tgenerator/: CMakeLists.txt
tools/tgenerator/src/: Generator.cpp  Generator.h  GeneratorApp.cpp  GeneratorApp.h  QuotedTextReader.cpp  QuotedTextReader.h  SimpleTextWriter.cpp  SimpleTextWriter.h
totem/: CMakeLists.txt
totem/Dependencies/glad/: CMakeLists.txt
totem/Dependencies/glad/include/glad/: glad.h
totem/Dependencies/glad/src/: glad.c
totem/Dependencies/stb/: CMakeLists.txt
totem/resources/shaders/: DefFont.glsl  DefTexture.glsl  Ffont.glsl  Ftexture.glsl  Vtexture.glsl
totem/src/: App.cpp  App.h  Events.h  Log.cpp  Log.h  ResourceManager.cpp  ResourceManager.h  Timer.h  Totem.cpp  Window.cpp  Window.h
totem/src/Animations/: Animation.cpp  Animation.h  Animator.cpp  Animator.h  BasicAnimations.h
totem/src/Animations/BasicAnimations/: InterpAnimations.h  SeqAnimation.cpp  SeqAnimation.h  StepAnimation.cpp  StepAnimation.h
totem/src/Core/: Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h
totem/src/Filesystem/: FileSystem.cpp  FileSystem.h  Utils.cpp  Utils.h
totem/src/Internationalization/: Text.cpp  Text.h
totem/src/Math/: Mat.cpp  Mat.h  Vec.h
totem/src/Novel/: Character.cpp  Character.h  CharacterScene.cpp  CharacterScene.h  ClientAPI.h  DialogBox.cpp  DialogBox.h  DialogOptions.cpp  DialogOptions.h  MainMenu.cpp  MainMenu.h  NovelApp.cpp  NovelApp.h  PauseMenu.cpp  PauseMenu.h  Script.cpp  Script.h  ScriptRegistry.cpp  ScriptRegistry.h
totem/src/Novel/Handlers/: ExitLoopHandler.h  IdleHandler.h  SpeechHandler.cpp  SpeechHandler.h  WaitClickHandler.cpp  WaitClickHandler.h
totem/src/Platform/Linux/: LinuxWindow.cpp  LinuxWindow.h
totem/src/Platform/Linux/Filesystem/: LinuxFileSystem.cpp  LinuxFileSystem.h  LinuxUtils.cpp  LinuxUtils.h
totem/src/Platform/Windows/Filesystem/: WindowsFileSystem.cpp  WindowsFileSystem.h  WindowsUtils.cpp  WindowsUtils.h
totem/src/Renderer/: Font.h  FontRenderer.cpp  FontRenderer.h  RenderPrimitives.cpp  RenderPrimitives.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
totem/src/Renderer/RendererPrimitives/: Rect.cpp  Rect.h
totem/src/Rendering/: Font.cpp  Font.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
totem/src/Rendering/Primitives/: Rect.cpp  Rect.h
totem/src/UI/: BaseElement.cpp  BaseElement.h  BasicElementImpl.cpp  BasicElementImpl.h  Button.cpp  Button.h  CheckButton.cpp  CheckButton.h  Clickable.cpp  Clickable.h  Element.h  IIEListener.h  IMovableElement.h  IUIElement.cpp  IUIElement.h  InteractiveElement.cpp  InteractiveElement.h  InteractiveElementImpl.cpp  InteractiveElementImpl.h  MovableElement.cpp  MovableElement.h  TextBox.cpp  TextBox.h  UIElement.cpp  UIElement.h  UILinearLayout.cpp  UILinearLayout.h  UIManager.cpp  UIManager.h
totem/src/UI/CommonMediators/: UIButtonExclusiveGroup.cpp  UIButtonExclusiveGroup.h
